# Telegram-Index-Bot

./: Cargo.toml  Dockerfile
src/: elastic.rs  main.rs  telegram_bot.rs
src/types/: mod.rs  search_result.rs
