[package]
name = "telegram-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
elasticsearch = "8.5.0-alpha.1"
futures = "0.3.28"
log = "0.4.20"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
